hphp/hack/test/typecheck/tconst/unsupported_this4.php
<?hh // strict

class C {
  const type X = int;

  public function foo(this::X $x): void {}
}
